# customer-support-email-agent

./: .env.example  .gitignore  FILE_MANIFEST.md  PROJECT_SUMMARY.md  README.md  RESUME_ACTION_PLAN.md  RESUME_COPY_PASTE.txt  RESUME_PROJECT_SECTION.md  RESUME_SUMMARY.md  WORKFLOW_GUIDE.md  infographics.html  main.py  pyproject.toml  requirements.txt  run_system.sh
data/: .gitkeep
data/knowledge/: account.json  billing.json  general.json  technical.json
frontend/: README.md  app.py
scripts/: populate_knowledge_base.py
src/: __init__.py
src/api/: main.py  routes.py
src/core/: __init__.py  config.py
src/db/: __init__.py  database.py  models.py
src/graph/: __init__.py  workflow.py
src/nodes/: __init__.py  email_classifier.py  finalizer.py  human_review.py  knowledge_retriever.py  priority_assessor.py  response_generator.py  sentiment_analyzer.py
src/prompts/: __init__.py  templates.py
src/schemas/: __init__.py  agent_state.py  email.py
src/services/: __init__.py  db_service.py  email_service.py  knowledge_service.py  llm_service.py
src/utils/: __init__.py  helpers.py  logger.py
test/: test_example.py
